--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,19 +41,24 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    implementation "androidx.paging:paging-common-ktx:3.1.1"
+    implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
+
     implementation 'androidx.fragment:fragment-ktx:1.6.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation "androidx.paging:paging-common-ktx:3.1.1"
-    // alternatively - without Android dependencies for tests
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
     implementation 'androidx.databinding:databinding-runtime:8.0.2'
-    implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     testImplementation 'junit:junit:4.13.2'
+
     implementation 'com.github.bumptech.glide:glide:4.15.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
+
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
