--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,10 @@ android {
         enabled = true
     }
 
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
 }
 
 dependencies {
@@ -55,6 +59,7 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     implementation("com.google.dagger:hilt-android:2.44")
+    implementation 'androidx.test.ext:junit-ktx:1.1.5'
     kapt("com.google.dagger:hilt-android-compiler:2.44")
 
     implementation 'com.github.bumptech.glide:glide:4.15.1'
@@ -65,12 +70,18 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
 
     testImplementation 'androidx.arch.core:core-testing:2.2.0@aar'
-    testImplementation 'org.mockito:mockito-core:3.12.4'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.2.0@aar'
+
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "org.robolectric:robolectric:4.10.3"
+    androidTestImplementation 'junit:junit:4.13.2'
+
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.2'
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.2'
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.7.21"
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation 'androidx.arch.core:core-testing:2.2.0'
-
 }
 
 kapt {
