--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     kapt("com.google.dagger:hilt-android-compiler:2.44")
 
     implementation 'com.github.bumptech.glide:glide:4.15.1'
+    implementation 'com.airbnb.android:lottie:3.3.0'
 
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -70,18 +71,13 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
 
     testImplementation 'androidx.arch.core:core-testing:2.2.0@aar'
-    androidTestImplementation 'androidx.arch.core:core-testing:2.2.0@aar'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation "org.robolectric:robolectric:4.10.3"
-    androidTestImplementation 'junit:junit:4.13.2'
 
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.2'
-    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.2'
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.7.21"
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
 
 kapt {
